fix overflow bug

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -30,7 +30,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    height: 100vh;
+    /* height: 100vh; */
 
     text-align: center;
     
